welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:3: error: Unit does not take parameters
    faireLigne(){}
                ^